[package]
name = "zero2prod"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
actix-web = "4"
config = "0.15.18"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
tracing = { version = "0.1", features = ["log"] }
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2.0"
secrecy = { version = "0.10.3", features = ["serde"] }
tracing-actix-web = "0.7.19"
serde-aux = "4.7.0"
unicode-segmentation = "1.12.0"
validator = "0.20.0"
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.

[dependencies.sqlx]
version = "0.8"
default-features = false
features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "migrate",
]

[dev-dependencies]
once_cell = "1"
claims = "0"
